# site-inspector

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURRENT_AUDIT.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  run_tests.ps1  run_tests.sh  site_audit.py
.github/workflows/: package.yml  test.yml
site_inspector/: __init__.py  ai_audit.py  cli.py  crawl.py  diffing.py  dom_clustering.py  duplicates.py  graph.py  html_report.py  inner_collectors.py  lighthouse.py  log.py  mcp_server.py  playwright_audit.py  posture.py  reporting.py  seo_audit.py  template_clustering.py  utils.py
site_inspector/scripts/: inner_collector.py  playwright_runner.cjs
tests/: __init__.py  conftest.py  contract_assertions.py  helpers.py  smoke_html.py  test_ai_audit.py  test_budget_bom.py  test_cli_diff.py  test_cli_duplicates_block.py  test_cli_error_handling.py  test_cli_lighthouse_sample.py  test_cli_run.py  test_cli_run_resume.py  test_cli_version.py  test_crawl_guardrails.py  test_diff_missing_run_dir_message.py  test_golden_schema.py  test_graph.py  test_html_report.py  test_mcp_tools.py  test_module_entrypoint.py  test_output_contracts.py  test_project_metadata.py  test_reporting_layout.py  test_seo_audit.py  test_validation_corpus.py
tests/fixtures/corpus_site/: about.html  dup-a.html  dup-b.html  index.html  noindex.html  pricing.html
tests/fixtures/corpus_site/blog/: post-1.html
tests/fixtures/corpus_site/resources/: guide.html
tests/fixtures/site/: about.html  dup-a.html  dup-b.html  index.html
tests/fixtures/site/products/: index.html  widget.html
tests/golden/: diff_contract.json  quality_summary_contract.json  run_contract.json  run_schema.json  run_top_keys.json
