[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-inspector"
version = "0.7.0"
description = "Windows-first CLI for technical website auditing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI / User project"}]
license = {text = "Proprietary"}
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]
keywords = ["seo", "crawler", "audit", "lighthouse", "playwright", "site-inspector", "technical-seo", "ai-crawler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
site-inspector = "site_inspector.cli:main"

[tool.setuptools.packages.find]
include = ["site_inspector*"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://example.com/site-inspector"
Documentation = "https://example.com/site-inspector/docs"
Repository = "https://example.com/site-inspector/repo"
Issues = "https://example.com/site-inspector/issues"
