[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-inspector"
version = "0.7.0"
description = "Windows-first CLI for technical website auditing, structural analysis, SEO, AI crawler readiness, and diff-based site intelligence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Site Inspector maintainers" }]
license = "MIT"
keywords = ["seo", "crawler", "audit", "lighthouse", "playwright", "site-intelligence"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Repository = "https://github.com/Mark2Mac/site-inspector"
Issues = "https://github.com/Mark2Mac/site-inspector/issues"
Homepage = "https://github.com/Mark2Mac/site-inspector"
Changelog = "https://github.com/Mark2Mac/site-inspector/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Mark2Mac/site-inspector#readme"

[project.scripts]
site-inspector = "site_inspector.cli:main"

[tool.setuptools.packages.find]
include = ["site_inspector*"]
exclude = ["tests*"]