[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-inspector"
version = "0.8.0"
description = "Windows-first CLI for technical website auditing, structural analysis, SEO, AI crawler readiness, and diff-based site intelligence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Site Inspector maintainers" }]
license = "MIT"
keywords = ["seo", "crawler", "audit", "lighthouse", "playwright", "site-intelligence", "website-audit", "web-crawler", "mcp", "pagerank"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "build>=1.2",
  "twine>=5.0",
]
mcp = [
  "mcp>=1.0",
]

[project.urls]
Repository = "https://github.com/Mark2Mac/site-inspector"
Issues = "https://github.com/Mark2Mac/site-inspector/issues"
Homepage = "https://github.com/Mark2Mac/site-inspector"
Changelog = "https://github.com/Mark2Mac/site-inspector/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Mark2Mac/site-inspector#readme"

[project.scripts]
site-inspector = "site_inspector.cli:main"
site-inspector-mcp = "site_inspector.mcp_server:main"

[tool.setuptools.packages.find]
include = ["site_inspector*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
site_inspector = ["scripts/*.py", "scripts/*.cjs"]
